--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1,3 +1,91 @@
+/* BELOCAL STYLES */
+.beLocal-highlight {
+  color: #8ed41e;
+  font-weight: bold;
+}
+
+.beLocal-search {
+  width:600px;
+}
+
+.dropdown-toggle {
+  cursor: pointer;
+}
+
+.beLocal-header {
+  background-image: url("/images/header.jpg");
+  background-position-x: center;
+  background-position-y: 37%;
+  background-size: 100%;
+  height: 394px;
+  margin-bottom: 0px;
+}
+
+.navbar-footer {
+  border-top: none;
+  position:absolute;
+  bottom: 0px;
+  height: 85px;
+  width: 100%;
+  background-color: rgba(0,0,0,0.6);
+  display:table;
+}
+
+.navbar-footer p {
+  display:table-cell;
+  vertical-align:middle;
+  color:white;
+  padding-left: 20px;
+  font-size: 18pt;
+  font-family: 'Pacifico', cursive;  
+}
+
+.beLocal-btn {
+  background-color: white;
+  border: 1px solid #8ed41e;
+  color: #8ed41e;
+}
+
+.beLocal-btn:hover {
+  background-color: #fafafa;
+  border: 1px solid #8ed41e;
+  color: #8ed41e;
+}
+
+.beLocal-btn-filled {
+  background-color: #8ed41e;
+  color: white;
+}
+
+.beLocal-btn-filled:hover {
+  background-color: #89cc1d;
+  color: white;
+}
+
+/*TWITCKER STYLES */
+
+#twitcker-bar {
+  background: #FAFAFA !important;
+  border: none !important;
+}
+
+div.box {
+  background: #8ed41e !important;
+}
+
+/*.border-left {
+  height: 50px !important;
+}
+
+.border-right {
+  height: 50px !important;
+  margin: 0px !important;
+} */
+
+div.box a {
+  color: white !important;
+}
+
 /* Space out content a bit */
 body {
   padding-top: 20px;
