Added the seller tab bar, name, & avatar

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -1,5 +1,49 @@
 <nav-bar></nav-bar>
-<div class="container-fluid marketing">
+
+<div style="position:relative;">
+  <div class="jumbotron beLocal-header">
+    <div class="container">
+
+    </div>
+  </div>
+
+
+<!--Seller-Navigation-->
+<div class="seller-banner">
+	<row >
+		<div class="seller-Avatar col-sm-3">
+			<div class="AvatarContainer">
+				<img src="http://gradschool.oregonstate.edu/sites/gradschool.oregonstate.edu/files/styles/square_medium/public/default_images/user_icon.png?itok=mbz2tJug">
+			</div>
+	  	</div>
+		<div class="seller-Name col-sm-9"><h1>Sellers Name Here</h1></div>
+	</row>
+</div>
+
+<div class="seller-tabs">
+	<row>
+		<div class="seller-tabs col-md-offset-3">
+		<ul class="nav nav-pills nav-justified">
+  			<li class="active"><a href="#">Home</a></li>
+  			<li><a href="#">Profile</a></li>
+  			<li><a href="#">Messages</a></li>
+		</ul></div>
+	</row>
+</div>
+<!--
+<div class="full-width-tabs container-fluid">
+  <ul class="nav nav-pills nav-pills-home" role="tablist">
+    <li class="full-width"><a href="#">Markets</a></li>  
+    <li class="full-width active"><a href="#">Trending</a></li>
+    <li class="full-width"><a href="#">Vendors</a></li>
+  </ul>
+</div>
+-->
+
+<div class="container marketing">
+
+
+	<!-- Modal for Seller Adding an Item -->
 	<div class="row">
 		<!-- Button trigger modal -->
 		<button class="btn btn-primary btn-lg" data-toggle="modal" data-target="#itemModal">
@@ -35,6 +79,8 @@
 		    </div><!-- /.modal-content -->
 		  </div><!-- /.modal-dialog -->
 		</div><!-- /.modal -->
+
+
 	</div>	
 	<div class="row">
 		<div class="col-md-6">
@@ -60,4 +106,6 @@
 			</div>
 		</div>
 	</div>
+
+</div>
 </div>
