--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -216,4 +216,52 @@ body {
     .collapse.in{
         display:block !important;
     }
+
 }
+
+/* SELLER UI STARTS */
+
+.seller-Avatar  {
+    height: 0px;
+    z-index: 0;
+} 
+
+.AvatarContainer  {
+    top: -200px;
+    position:relative;
+    text-align: center;
+    border-color: black;
+    border: 2px;
+} 
+
+.AvatarContainer img {
+   padding:5px;
+   border:1px solid #696969;
+   background-color: #FFFFFF;
+   border-radius: 5px;
+   height: 100%;
+   width: 100%;
+   max-width: 250px;
+   max-height: 250px;
+}
+
+.seller-Name {
+  height: 0px;
+  top:-75px;
+  color: #FFFFFF;
+
+}
+
+.seller-tabs {
+  padding-bottom: 50px;
+  z-index: -1;
+}
+
+@media (max-width: 767px) {
+
+  .seller-Name {
+      text-align: center;
+  }
+
+}
+/* SELLER UI ENDS*/
