Made the seller nav bar, Avitar, name pretty

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -1,7 +1,7 @@
 <nav-bar></nav-bar>
 
 <div style="position:relative;">
-  <div class="jumbotron beLocal-header">
+  <div class="jumbotron beLocal-header-seller">
     <div class="container">
 
     </div>
@@ -25,8 +25,8 @@
 		<div class="seller-tabs col-md-offset-3">
 		<ul class="nav nav-pills nav-justified">
   			<li class="active"><a href="#">Home</a></li>
-  			<li><a href="#">Profile</a></li>
-  			<li><a href="#">Messages</a></li>
+  			<li><a class="inactive" href="#">Profile</a></li>
+  			<li><a class="inactive" href="#">Messages</a></li>
 		</ul></div>
 	</row>
 </div>
