Added an improved redirection system for views.
This allows us to put authentication requirements on client side views.
This commit also enabled the saving/retrieval of the user profile sent
back from the sever into a cookie called beLocalUser.

Finally, we’re now displaying the vendor’s name on the seller page.

--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -13,8 +13,8 @@
 
 <div id="twitter-feed"></div>
 
-<div class="full-width-tabs container-fluid">
-  <ul class="nav nav-pills nav-pills-home" role="tablist">
+<div class="full-width-tabs seller-tabs container-fluid">
+  <ul class="nav nav-pills" role="tablist">
     <li class="full-width"><a href="#">Markets</a></li>  
     <li class="full-width active"><a href="#">Trending</a></li>
     <li class="full-width"><a href="#">Vendors</a></li>
