seller item and location list

--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -217,3 +217,31 @@ body {
         display:block !important;
     }
 }
+
+/*seller-ui stuff*/
+/* Customize container */
+@media (min-width: 768px) {
+  .container-seller {
+    max-width: 730px;
+    margin: 50px 0px 0px 50px;
+  }
+}
+
+.seller-item{
+	margin: 10px 0px 0px 30px;
+	padding-left:0;
+	padding-right:0;
+}
+.seller-item>button{
+	margin-right:25px;
+}
+
+.seller-item-location{
+	border-right:0;
+	border-left:0;
+}
+
+.seller-item-stock input[type="radio"]{
+	margin-left:15px;
+}
+
