--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -119,7 +119,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Create New Location</h4>
+                <h4 class="modal-title">Create New Location<br /><small>Please complete the following fields to add a new seller location</small></h4>
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">                   
@@ -128,34 +128,81 @@
                             <div class="col-xs-12 col-md-12">
                                 <div class="form-group">
                                     <label for="item-name">Location Name</label>
-                                    <input type="text" class="form-control" id="item-name" placeholder="Enter Item Name"/>
-                                </div>
-                                <!-- Basic example -->
-                                <div class="form-group" ng-class="{'has-error': timepickerForm.time.$invalid}">
-                                    <label class="control-label"><i class="fa fa-clock-o"></i> Time <small>(as date)</small></label>
-                                    <input type="text" class="form-control" size="8" ng-model="time" name="time" bs-timepicker>
+                                    <input type="text" class="form-control" id="item-name" placeholder="Enter Location Name"/>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-xs-12 col-md-12">
+                            <div class="col-xs-6 col-md-6">
                                 <div class="form-group">
-                                    <label for="item-name">Location Name</label>
-                                    <input type="text" class="form-control" id="item-name" placeholder="Enter Item Name"/>
-                                </div>
-                                <!-- Basic example -->
+                                  <label>Start date:</label>                      
+                                  <div class="input-group">
+                                    <input required type="text" name="room" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="newLocationDate" is-open="opened" min="minDate" max="'2015-06-22'" ng-required="true" close-text="Close" />
+                                    <span class="input-group-btn">
+                                      <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                    </span>                       
+                                  </div>
+                                </div>                               
+                            </div>                        
+                            <div class="col-xs-3 col-md-3">
                                 <div class="form-group" ng-class="{'has-error': timepickerForm.time.$invalid}">
-                                    <label class="control-label"><i class="fa fa-clock-o"></i> Time <small>(as date)</small></label>
-                                    <input type="text" class="form-control" size="8" ng-model="time" name="time" bs-timepicker>
+                                    <label class="control-label"><i class="fa fa-clock-o"></i>Start Time</label>
+                                    <input type="text" class="form-control" size="8" ng-model="startTime" name="time" bs-timepicker>
                                 </div>
-                            </div>                                    
-                        </div>                        
+                            </div>
+                            <div class="col-xs-3 col-md-3">
+                                <div class="form-group" ng-class="{'has-error': timepickerForm.time.$invalid}">
+                                    <label class="control-label"><i class="fa fa-clock-o"></i>End Time</label>
+                                    <input type="text" class="form-control" size="8" ng-model="endTime" name="time" bs-timepicker>
+                                </div>
+                            </div>
+                        </div>    
+                        <div class="row">
+                            <div class="well">
+                                <div class="row">
+                                    <div class="col-xs-12 col-md-12">
+                                        <div class="form-group">
+                                            <label for="item-name">Street Address</label>
+                                            <input type="text" class="form-control" id="item-name" placeholder="Address"/>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-xs-6 col-md-6">
+                                        <div class="form-group">
+                                            <label for="item-name">City</label>
+                                            <input type="text" class="form-control" id="item-name" placeholder="City"/>
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="row">
+                                    <div class="col-xs-6 col-md-6">
+                                        <div class="form-group">
+                                            <label for="item-name">Province</label>
+                                            <input type="text" class="form-control" id="item-name" placeholder="Province"/>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-6 col-md-6">
+                                        <div class="form-group">
+                                            <label for="item-name">Postal Code</label>
+                                            <input type="text" class="form-control" id="item-name" placeholder="Postal Code"/>
+                                        </div>
+                                    </div>
+                                    <div class="col-xs-6 col-md-6">
+                                        <div class="form-group">
+                                            <label for="item-name">Country</label>
+                                            <input type="text" class="form-control" id="item-name" placeholder="Country"/>
+                                        </div>
+                                    </div>                                                                    
+                                </div>                                                                                                  
+                            </div>                            
+                        </div>                    
                     </form>
                 </div>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <button type="submit" class="btn btn-primary">Save</button>
+                <button type="submit" class="btn btn-primary">Add Location</button>
             </div>
         </div>
         <!-- /.modal-content -->
