--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -1,5 +1,48 @@
 /* BELOCAL STYLES */
 
+.nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
+  background-color: #8ed41e;
+}
+
+.nav > li > a {
+  color: #8ed41e;
+}
+
+.nav-pills-home > li > a {
+ border-radius: 0px !important; 
+}
+
+.btn-more-details {
+  float:right;
+  margin-top:12px;
+}
+
+.price {
+  color: #78c042;
+}
+
+.full-width-tabs > ul.nav.nav-pills {
+    display: table;
+    width: 100%;
+    table-layout: fixed; /* To make all "columns" equal width regardless of content */
+}
+.full-width-tabs > ul.nav.nav-pills > li {
+    float: none;
+    display: table-cell;
+}
+.full-width-tabs > ul.nav.nav-pills > li > a {
+    text-align: center;
+}
+
+.container-home-page {
+  margin-top: 25px;
+  max-width: 1170px !important;
+}
+
+.full-width {
+  width: 100%;
+}
+
 .alert {
   width: 100%;
   position: fixed;
@@ -319,11 +362,6 @@ body {
 
 .all-locations {
   background-color: #F1F1F1;
-}
-
-.thumbnail {
-  max-width: 200px;
-  max-height: 200px;
 }
 
 .nav-pills > li.active > a, .nav-pills > li.active > a:hover, .nav-pills > li.active > a:focus {
