--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -142,10 +142,21 @@
                 <div class="container-fluid">                   
                     <form role="form" name="locationForm" novalidate ng-submit="newLocationSubmit()">
                         <div class="row">
-                            <div class="col-xs-12 col-md-12">
+                            <div class="col-xs-6 col-md-6">
                                 <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationField.$invalid }">
                                     <label for="item-name">Location Name</label>
                                     <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Enter Location Name"/>
+                                </div>
+                            </div>
+                            <div class="col-xs-6 col-md-6">
+                                <div class="form-group">
+                                    <label for="item-name">Location Type</label><br />
+                                    <label class="radio-inline">
+                                      <input type="radio" ng-model="locationType" name="locationTypeOptions" id="farmRadio" value="FAR"><p>Farm</p>
+                                    </label>
+                                    <label class="radio-inline">
+                                      <input type="radio" ng-model="locationType" name="locationTypeOptions" id="marketRadio" value="MAR"><p>Market</p>
+                                    </label>                            
                                 </div>
                             </div>
                         </div>
