--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -41,10 +41,14 @@
     </div>
 
     <!-- repeating for each location that seller has in the db -->
-    <div class="row list-group-item">
+    <div ng-repeat="location in sellerLocations" class="row list-group-item">
         <div class="col-xs-10">
-            <h4>Location Name</h4>
-            Location Address
+            <h4>{{location.name}}</h4>
+            <address>
+                {{location.address.addr_line1}}<br />
+                {{location.address.city}}, {{location.address.state}}, {{location.address.zipcode}}<br />
+                {{location.address.country}}
+            </address>
         </div>
         <div class="col-xs-2 edit-button-container">
             <button class="btn btn-primary btn-md" data-toggle="modal" data-target="#locationModal">Edit</button>
