--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -358,6 +358,7 @@ body {
 .seller-title-bar{
   padding-left: 0px;
   padding-right: 0px;
+  padding top: 30px;
 }
 
 .all-locations {
@@ -384,4 +385,8 @@ color: #000 !important;
     border-radius:0px;
 }
 
+
+.seller-location-details {
+  padding-left:15px;
+}
 /* SELLER UI ENDS*/
