--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -62,7 +62,7 @@
             <h3>Your Inventory</h3>
         </div>
         <div class="col-xs-6 add-new-button-container">
-            <button class="btn btn-primary btn-md pull-right" data-toggle="modal" data-target="#itemModal">Create New Item</button>
+            <button class="btn btn-primary btn-md pull-right" data-toggle="modal" ng-click="resetItemModal()" data-target="#itemModal">Create New Item</button>
         </div>
     </div>
 
@@ -106,28 +106,43 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Create New Item</h4>
+                <h4 ng-hide="isEditingItem" class="modal-title">Add New Item<br /><small>Please complete the following fields to add a new item</small></h4>
+                <h4 ng-show="isEditingItem" class="modal-title">Edit Location<br /><small>Please change any of the fields below to update an existing item</small></h4>                
             </div>
-            <form role="form">
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="item-name">Item Name</label>
-                        <input type="email" class="form-control" id="item-name" placeholder="Enter Item Name"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="item-description">Item Description</label>
-                        <textarea class="form-control" id="item-description" placeholder="Enter Description"/>
-                    </div>
-                    <div class="form-group">
-                        <label for="item-image">Upload Image</label>
-                        <input type="file" id="item-image">
-                    </div>
+            <div class="modal-body">  
+                <div class="container-fluid">                   
+                    <form role="form" name="itemForm" novalidate>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-12">
+                                <div class="form-group" ng-class="{ 'has-error' : newItemSubmitted && itemForm.itemField.$invalid }">
+                                    <label for="item-name">Item Name</label>
+                                    <input required ng-model="itemName" type="text" name="itemField" class="form-control" id="item-name" placeholder="Item Name"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-12">
+                                <div class="form-group" ng-class="{ 'has-error' : newItemSubmitted && itemForm.descriptionField.$invalid }">
+                                    <label for="item-name">Item Description</label>
+                                    <textarea required ng-model="itemDescription" type="text" name="descriptionField" class="form-control" id="item-name" placeholder="Item Description"/>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xs-12 col-md-12">
+                                <div class="form-group" ng-class="{ 'has-error' : newItemSubmitted && itemForm.imageField.$invalid }">
+                                    <label for="item-image">Upload Image</label>
+                                    <input onchange="angular.element(this).scope().fileNameChanged(this.files)" name="imageField" type="file" id="item-image">
+                                </div>
+                            </div>
+                        </div>
+                    </form>
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Save</button>
-                </div>
-            </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="submit" ng-click="newItemSubmit()" class="btn btn-primary">{{submitItemButtonText}}</button>
+            </div>
         </div>
         <!-- /.modal-content -->
     </div>
@@ -140,16 +155,17 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                <h4 class="modal-title">Create New Location<br /><small>Please complete the following fields to add a new seller location</small></h4>
+                <h4 ng-hide="isEditingLocation" class="modal-title">Add New Location<br /><small>Please complete the following fields to add a new seller location</small></h4>
+                <h4 ng-show="isEditingLocation" class="modal-title">Edit Location<br /><small>Please change any of the fields below to update an existing seller location</small></h4>                
             </div>
             <div class="modal-body">  
                 <div class="container-fluid">                   
-                    <form role="form" name="locationForm" novalidate ng-submit="newLocationSubmit()">
+                    <form role="form" name="locationForm" novalidate>
                         <div class="row">
                             <div class="col-xs-6 col-md-6">
                                 <div class="form-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.locationField.$invalid }">
                                     <label for="item-name">Location Name</label>
-                                    <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Enter Location Name"/>
+                                    <input required ng-model="locationName" type="text" name="locationField" class="form-control" id="item-name" placeholder="Location Name"/>
                                 </div>
                             </div>
                             <div class="col-xs-6 col-md-6">
